Fix layout issues

--- a/src/apps/pet/app.less
+++ b/src/apps/pet/app.less
@@ -59,6 +59,10 @@ h1, h2, h3, h4, h5, h6{
   }
 }
 
+.wallpaper-thumbnail{
+  padding: 5px 0;
+}
+
 .thanks-download-image-wrap{
   img{
     padding-bottom: 30px;
@@ -186,8 +190,8 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .overlay{
-  background: rgb(25,25,25);
-  background: linear-gradient(124deg, rgba(25,25,25,1) 0%, rgba(65,65,65,1) 100%);
+  // background: rgb(25,25,25);
+  background: linear-gradient(124deg, rgba(25,25,25,1) 50%, rgba(65,65,65,1) 100%);
   opacity: .3;
 }
 
